deployment/frontend/K8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/studyconnect-zhaw/frontend/staging:0.0.10
        ports:
        - containerPort: 3000
